--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-PROJECT("ICARUS_PLUGIN")
+PROJECT("ICARUS")
 
 CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
 
@@ -10,6 +10,7 @@ IF(WIN32 AND MSVC)
   ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
 ENDIF(WIN32 AND MSVC)
 
+SET(PLUGIN_NAME ${PROJECT_NAME})
 #--------------------------------------------------
 # Find and Use ParaView
 #--------------------------------------------------
@@ -112,7 +113,7 @@ encode_files_as_strings(ENCODED_FILTERS
 # Define Plugin
 #--------------------------------------------------
 ADD_PARAVIEW_PLUGIN(
-  CSCS_DSM
+  ${PLUGIN_NAME}
   "1.0" 
 
   SERVER_MANAGER_XML 
@@ -152,14 +153,14 @@ ADD_PARAVIEW_PLUGIN(
     ${CMAKE_CURRENT_SOURCE_DIR}/pqDsmViewerPanel.ui
 )
 
-TARGET_LINK_LIBRARIES(CSCS_DSM XdmfGenerator)
+TARGET_LINK_LIBRARIES(${PLUGIN_NAME} XdmfGenerator)
 
 IF(WIN32 AND MSVC)
-  TARGET_LINK_LIBRARIES(CSCS_DSM H5FDdsm hdf5)
+  TARGET_LINK_LIBRARIES(${PLUGIN_NAME} H5FDdsm hdf5)
 ENDIF(WIN32 AND MSVC)
 
 IF(ICARUS_USE_H5PART)
-  TARGET_LINK_LIBRARIES(CSCS_DSM pv_meshless)
+  TARGET_LINK_LIBRARIES(${PLUGIN_NAME} pv_meshless)
 ENDIF(ICARUS_USE_H5PART)
 
 
@@ -196,7 +197,7 @@ INSTALL(
 IF(PARAVIEW_BUILD_QT_GUI)
   INSTALL(
     TARGETS
-      CSCS_DSM
+      ${PLUGIN_NAME}
     DESTINATION ${INSTALL_PATH}
   )
 ENDIF(PARAVIEW_BUILD_QT_GUI)
