Improve Time handling from simulation into animation view
We override the TimeRange/TimeSteps of the sources (H5Part/Xdmf) so that
they values they export don't cause the animation track to reset its bounds.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,13 +189,10 @@ ADD_PARAVIEW_PLUGIN(
 )
 
 TARGET_LINK_LIBRARIES(${PLUGIN_NAME} XdmfGenerator ${ICARUS_NETCDF_LIBS})
-
-IF(WIN32 AND MSVC)
-  TARGET_LINK_LIBRARIES(${PLUGIN_NAME} H5FDdsm hdf5)
-ENDIF(WIN32 AND MSVC)
+TARGET_LINK_LIBRARIES(${PLUGIN_NAME} H5FDdsmTools H5FDdsm hdf5)
 
 IF(ICARUS_USE_H5PART)
-  TARGET_LINK_LIBRARIES(${PLUGIN_NAME} pv_meshless)
+  TARGET_LINK_LIBRARIES(${PLUGIN_NAME} pv_meshless )
 ENDIF(ICARUS_USE_H5PART)
 
 
