Add <Table> catagory to the Template for graph plots
The simulation can export <Table> values which are loaded and read by a new
DSMTable Reader and displayed in paraview as a graph.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,6 +154,7 @@ ADD_PARAVIEW_PLUGIN(
     #${CMAKE_CURRENT_SOURCE_DIR}/vtkXdmfWriter4.xml
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkFlattenOneBlock.xml
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkSteeringWriter.xml
+    ${CMAKE_CURRENT_SOURCE_DIR}/vtkDsmTableReader.xml
     ${ICARUS_H5PART_XML}
     ${ICARUS_NETCDF_XML}
   SERVER_MANAGER_SOURCES
@@ -162,6 +163,7 @@ ADD_PARAVIEW_PLUGIN(
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkXdmfReader4.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkFlattenOneBlock.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkSteeringWriter.cxx
+    ${CMAKE_CURRENT_SOURCE_DIR}/vtkDsmTableReader.cxx
     ${ICARUS_H5PART_SOURCES}
     ${ICARUS_NETCDF_SOURCES}
   SERVER_SOURCES
