Fixes for pv-4.1 build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,7 +189,7 @@ ADD_PARAVIEW_PLUGIN(
     ${CMAKE_CURRENT_SOURCE_DIR}/pqDsmViewerPanel.ui
 )
 
-TARGET_LINK_LIBRARIES(${PLUGIN_NAME} vtkIOXdmf2 XdmfGenerator ${ICARUS_NETCDF_LIBS})
+TARGET_LINK_LIBRARIES(${PLUGIN_NAME} vtkIOXdmf2 XdmfGenerator ${ICARUS_NETCDF_LIBS} pqApplicationComponents)
 TARGET_LINK_LIBRARIES(${PLUGIN_NAME} H5FDdsmTools H5FDdsm hdf5)
 
 IF(ICARUS_USE_H5PART)
