Create an abstract dsm manager base class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,6 +158,7 @@ ADD_PARAVIEW_PLUGIN(
     ${ICARUS_H5PART_XML}
     ${ICARUS_NETCDF_XML}
   SERVER_MANAGER_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/vtkAbstractDsmManager.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkHDF5DsmManager.cxx
     #${CMAKE_CURRENT_SOURCE_DIR}/vtkXdmfWriter4.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkXdmfReader4.cxx
